--- a/config.yml
+++ b/config.yml
@@ -6,3 +6,47 @@ github:
       apiUrl: https://api.github.com
       manageHooks: true,
       credentialsId: github_access_token
+
+jenkins:
+  url: https://example.com
+  clouds:
+    - docker:
+        name: "docker"
+        host:
+          uri: "unix:///var/run/docker.sock"
+        credentials_id: ""
+        container_cap: 10
+        read_timeout: 15
+        connection_timeout: 5
+        templates:
+          - labels: "android"
+            image: "alapshin/android-build-env:latest"
+            executors: 1
+            instance_cap: ""
+            remote_fs: "/home/jenkins"
+            # valid values: exclusive or normal
+            usage: "normal"
+            # valid values: pull_latest, pull_always, pull_never
+            remove_volumes: false,
+            image_pull_strategy: "pull_latest"
+            # Docker settings
+            dns: ""
+            hostname: ""
+            docker_command: ""
+            volumes: ""
+            volumes_from: ""
+            environment: ""
+            # cpu_shares: 0,
+            # memory_limit: -1,
+            # memory_swap_limit: -1,
+            port_bindings: ""
+            bind_all_ports: false
+            priviliged: false
+            allocate_pseudo_tty: false
+            mac_address: ""
+            remote_fs_root_mapping: ""
+            # Availability settings
+            availability_strategy: "run_once"
+            availability_idle_timeout: 5
+            connector: 
+              user: "jenkins"
