Add volumes to android build agent
Add volumes to android build agent to avoid repository checkout and
dependency download every time agent is restarted.

--- a/config.yml
+++ b/config.yml
@@ -33,7 +33,7 @@ jenkins:
             dns: ""
             hostname: ""
             docker_command: ""
-            volumes: ""
+            volumes: "android_sdk:/opt/android-sdk\njenkins_agent_home:/home/jenkins"
             volumes_from: ""
             environment: ""
             # cpu_shares: 0,
