--- a/scripts/build.gradle
+++ b/scripts/build.gradle
@@ -35,5 +35,7 @@ dependencies {
     implementation "org.jenkins-ci.plugins.workflow:workflow-support:2.17@jar"
     implementation "org.jenkins-ci.plugins.workflow:workflow-cps-global-lib:2.9@jar"
 
+    implementation "org.codefirst.jenkins.simplethemeplugin:simple-theme-plugin:0.3@jar"
+
     testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
