--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,8 +30,7 @@ services:
     volumes:
       - "jenkins_home:/var/jenkins_home"
       - "/var/run/docker.sock:/var/run/docker.sock"
-      - "${WORKDIR-.}/jenkins.yml:/var/jenkins_home/config.yml"
-      - "${WORKDIR-.}/jenkins.yaml:/var/jenkins_home/jenkins.yaml"
+      - "${WORKDIR-.}/jenkins.yml:/var/jenkins_home/jenkins.yml"
     environment:
       DOCKER_GROUP: docker
       DOCKER_SOCKET: /var/run/docker.sock
@@ -39,7 +38,7 @@ services:
       JENKINS_USER: jenkins
       JENKINS_URL: "https://example.com"
       SONARQUBE_URL: "https://example.com"
-      CASC_JENKINS_CONFIG: /var/jenkins_home/jenkins.yaml
+      CASC_JENKINS_CONFIG: /var/jenkins_home/jenkins.yml
 
 volumes:
   jenkins_home:
