Fix agent-master access control after changes in plugin

--- a/jenkins.yml
+++ b/jenkins.yml
@@ -7,7 +7,7 @@ jenkins:
   crumbIssuer: standard
   # Enable agent -> master access control
   remotingSecurity:
-    enabled: false
+    enabled: true
 
   # Configure Docker cloud
   clouds:
