Override installed plugins if image contains newer versions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,8 @@ services:
       JENKINS_URL: "https://example.com"
       SONARQUBE_URL: "https://example.com"
       CASC_JENKINS_CONFIG: /var/jenkins_home/jenkins.yml
+      # Upgrade installed plugins if image contains newer version
+      TRY_UPGRADE_IF_NO_MARKER: 'true'
 
 volumes:
   jenkins_home:
