Force plugins update if image contains newer versions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
       SONARQUBE_URL: "https://example.com"
       CASC_JENKINS_CONFIG: /var/jenkins_home/jenkins.yml
       # Upgrade installed plugins if image contains newer version
-      TRY_UPGRADE_IF_NO_MARKER: 'true'
+      PLUGINS_FORCE_UPGRADE: 'true'
 
 volumes:
   jenkins_home:
