--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
 
     volumes:
       - "jenkins_home:/var/jenkins_home"
+      - "/usr/bin/docker:/usr/bin/docker"
       - "/var/run/docker.sock:/var/run/docker.sock"
       - "${WORKDIR-.}/jenkins.yml:/var/jenkins_home/jenkins.yml"
     environment:
