Allow authenticated users to start and cancel jobs

--- a/jenkins.yml
+++ b/jenkins.yml
@@ -34,6 +34,8 @@ jenkins:
           - name: "authenticated"
             description: "Authenticated users"
             permissions:
+              - "Job/Build"
+              - "Job/Cancel"
               - "Job/Read"
               - "Job/Discover"
               - "Overall/Read"
